# helloQmlTc

./: CMakeLists.txt  CommonWords.qml  Label.qml  ListItem.qml  ListTextItem.qml  LongSwitchCaseStatement.qml  MyButton.qml  MyErrorItem.qml  MyItem.qml  MyModel.qml  MyTextItem.qml  main.cpp  main.qml  widgetmodel.cpp  widgetmodel.h
